kubernetes/apps/downloads/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-non-vpn-traffic
  namespace: downloads
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: pod-gateway
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
            - port: "68"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: ingress-nginx-internal
            io.kubernetes.pod.namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: ingress-nginx-internal
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: pod-gateway
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
            - port: "67"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-non-vpn-traffic
  namespace: downloads
spec:
  endpointSelector:
    matchLabels:
      vpn.home.arpa/enabled: "false"
  egress:
    - toEntities:
        - all
